# functional-treatment-effects

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: main.yml
src/functional_treatment_effects/: __init__.py  config.py
src/functional_treatment_effects/analysis/: task_analysis.py
src/functional_treatment_effects/data/: ankle_moments.csv  info.yaml  strike_index.csv  subject_information.csv
src/functional_treatment_effects/data_management/: __init__.py  data_management.py  task_data_management.py
src/functional_treatment_effects/paper/: bibliography.bib  main.tex  task_compile_paper.py
src/functional_treatment_effects/paper/source/: abstract.tex  preamble.tex
src/functional_treatment_effects/paper/source/sections/: application.tex  estimator.tex  introduction.tex  kernel-assumptions.tex  model.tex  proof.tex  simulations.tex  textbook-theory.tex
src/functional_treatment_effects/plotting/: plotting.py  task_plotting.py
src/functional_treatment_effects/presentation/: custom.scss  main.md  task_render_presentation.py
tests/: test_data_management.py  test_pyask.py  test_pytask.py
