[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]


[tool.setuptools_scm]
write_to = "src/functional_treatment_effects/_version.py"


[tool.pytask.ini_options]
paths = "./src/functional_treatment_effects"
infer_latex_dependencies = false


[tool.interrogate]
ignore-init-module = true
ignore-nested-functions = true
exclude = ["setup.py", "docs", "bld"]
ignore-regex = ["task_*"]
