[metadata]
name = functional-treatment-effects
description = Companion package to the paper *Functional Treatment Effects*
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/timmens/functional-treatment-effects
author = Tim Mensinger
author_email = tmensinger@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/timmens/functional-treatment-effects
    Documentation = hhttps://github.com/timmens/functional-treatment-effects
    Github = https://github.com/timmens/functional-treatment-effects
    Tracker = https://github.com/timmens/functional-treatment-effects/issues

[options]
packages = find:
install_requires =
    networkx
    numpy
    pandas
    pytask
    scikit-learn
    scipy
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/functional_treatment_effects/_version.py
